Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjTextRetObject.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Object> yoda
        Object ret = yoda:useForce(one, two)
        output "passed"
     end
end
