Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjTextRetbooleanFail.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
